[project]
name = "hmt_py"
version = "0.1.0"
description = "A Python library for working with the Homer Multitext project's archive."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipython",
    "pydantic>=2.12.5",
    "cite_exchange>=0.2.0",
    "logging>=0.4.9.6"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/hmt_py"]

